# pw85

./: .gitignore  CMakeLists.txt  README.md  README.rst  pw85.code-workspace
docs/: .buildinfo  abstract.html  c_api.html  cpp_api.html  genindex.html  implementation.html  index.html  installation-old.html  installation.html  objects.inv  optimization.html  overview.html  py-modindex.html  py_api.html  reference.html  search.html  searchindex.js  testing.html  theory.html  tutorial.html
docs/.doctrees/: c_api.doctree  cpp_api.doctree  environment.pickle  implementation.doctree  index.doctree  installation-old.doctree  installation.doctree  optimization.doctree  overview.doctree  py_api.doctree  testing.doctree  theory.doctree  tutorial.doctree
docs/_downloads/19857ef069a7f0b0aceb90495cc1eeac/: CMakeLists.txt
docs/_downloads/233e6bef8249b1671fdc78d2f53b1f02/: tutorial.py
docs/_downloads/37b9dfb55a3c986f95001cc5d749559f/: meson.build
docs/_downloads/3b90a5b5c2406a58b05f4d8ee68f22ed/: f_accuracy.c
docs/_downloads/5501d842fdce79fe9eebce653b50c3bb/: tutorial.c
docs/_downloads/a6433564232c94b6217d3a1c4e2e3f51/: f_accuracy.py
docs/_downloads/bbf683b2f02056b9cb4695a754799d30/: meson_options.txt
docs/_downloads/da617670770c1e3f9359aa62da00e30f/: tutorial.py
docs/_downloads/e5bb549a7d88ffb0a42438d6980b745c/: CMakeLists.txt
docs/_modules/: index.html  pw85.html  pypw85.html
docs/_modules/pw85/: legacy.html
docs/_modules/pypw85/: hilevel.html  legacy.html
docs/_sources/: abstract.rst.txt  c_api.rst.txt  cpp_api.rst.txt  implementation.rst.txt  index.rst.txt  installation-old.rst.txt  installation.rst.txt  optimization.rst.txt  overview.rst.txt  reference.rst.txt  theory.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/breathe/doxygen/: pw85.cfg
docs/breathe/doxygen/pw85/xml/: dir_afad4b991a74bf885d59724fd9ed538a.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  namespacepw85.xml  namespacepw85_1_1metadata.xml  pw85_8hpp.xml
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  index.html  objects.inv  search.html
include/: CMakeLists.txt  config.cmake.in
include/pw85/: pw85.h  pw85.hpp  pw85_legacy.h  pw85_legacy.hpp
joss/: paper.md  pw85.bib  pw85.md
legacy/: pw85_legacy.cpp
metadata/: author.txt  description.txt  email.txt  name.txt  repository.txt  short_description.txt  url.txt
pw85/: .astylerc  pw85.c  pw85.h
pypw85/: __init__.py
python/: pypw85.cpp  setup.py
python/docstrings/: _cholesky_decomp.txt  _cholesky_solve.txt  contact_function.txt  f_neg.txt  spheroid.txt
python/pw85/: __init__.py  legacy.py  utils.py
python/pypw85/: __init__.py
python/tests/: test_pw85.py  test_pw85_legacy.py
sandbox/: Cholesky.ipynb  Contact_function_with_Cholesky_and_Newton-Raphson.ipynb  comparison_of_implementations_of_f.ipynb  gen_ref_data.ipynb  pw85_mpmath.ipynb  pw85_mwe.py
sandbox/gsl_brent/: Makefile  brent_gsl.c
sphinx/: .dir-locals.el  .gitignore  Makefile  c_api.rst  conf.py  conf.py.in  implementation.rst  index.rst  index.rst.in  installation.rst  make.bat  optimization.rst  overview.rst  py_api.rst  reference.rst  testing.rst  theory.rst  tutorial.py  tutorial.rst
sphinx/c_tutorial/: CMakeLists.txt  CMakelists.txt  README.md  pw85_tutorial.c  tutorial.c
sphinx/cpp_tutorial/: tutorial.cpp
sphinx/implementation/: draw_histograms.py  f_accuracy.c  f_accuracy.py  histograms.csv  implementation-01.csv  implementation-02.csv  meson.build
sphinx/implementation/f_accuracy/: meson.build  meson_options.txt
sphinx/py_tutorial/: tutorial.py
src/: CMakeLists.txt  download_ref_data.py  hdf5_example.c  meson.build  preprocess_headers.py  pw85-config-version.cmake.in  pw85-config.cmake.in  pw85.c  pw85.cpp  pw85.h  pw85.h.in  pw85_legacy.c  pw85_legacy.cpp  pw85_legacy.h  test_pw85.c
src/C/: CMakeLists.txt  Makefile  pw85.c
src/pkg/: pw85-config.cmake.in
src/python/: pw85.py  setup.py
tests/: CMakeLists.txt  test_pw85.c  test_pw85.cpp  test_pw85.py
wrappers/python-ctypes/: setup.cfg  setup.py
wrappers/python-ctypes/pypw85/: __init__.py  __utils.py  hilevel.py  legacy.py  lowlevel.py  pypw85_legacy.py  utils.py
wrappers/python-ctypes/tests/: conftest.py  test_pw85.py  test_pw85_legacy.py
wrappers/python-ctypes/tests/data/: gen_ref_data.py  pw85_gen_ref_data.py
